@@ -45,6 +45,7 @@ Build-Depends: bcc,
                libxrandr-dev,
                libxrender-dev,
                libxslt1-dev,
+               lsb-release,
                lynx-cur,
                makeself,
                python-central (>= 0.6.7~),
