@@ -10,6 +10,8 @@ virtualbox-ose (4.0.6-dfsg-1) UNRELEASED; urgency=low
   * Add lintian overrides for no-symbols-control-file usr/lib/VBoxOGL*.so.
   * Create vboxsf group in virtualbox-ose-guest-utils postinst to make
     auto-mounting shared folders work.
+  * Automatically detect the distribution version for backports.
+    - Build-depend on lsb-release.
 
  -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 22 Apr 2011 11:31:53 +0200
 
